--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
   color: var(--font-base);
   scroll-behavior: smooth;
 }
+
 /*---------HEADER-----------*/
 
 header {
@@ -61,10 +62,9 @@ header .logo-container img {
   object-fit: contain;
 }
 header .logo-container figcaption {
-  width: 40%;
+  width: 50%;
   font-weight: 300;
-  font-size: 1.1rem;
-  margin-left: 3px;
+  font-size: 1.2rem;
 }
 
 header .navbar {
@@ -93,7 +93,7 @@ main .hero {
   margin: 0 auto;
   /* padding-left: 10px; */
   justify-items: center;
-  grid-template: 1fr / repeat(auto-fit, minmax(300px, 1fr));
+  grid-template: minmax(320px, 1fr) / repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .hero .hero__texts .hero__texts__line {
@@ -115,7 +115,8 @@ h1 {
 
 .hero__texts .hero__texts__description {
   font-size: 1.4rem;
-  margin: 8px;
+  margin: 8px 0;
+  width: 95%;
   font-weight: 500;
   line-height: 2rem;
   color: #7c7b9d;
@@ -123,7 +124,7 @@ h1 {
 
 .hero__texts .hero__texts__cta {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: 1.4rem;
   font-weight: 300;
   margin-top: 25px;
@@ -283,9 +284,12 @@ main .service-description {
 .contact-reseller .contact-reseller__contact input {
   min-width: 200px;
   width: 90%;
+  font-size: 1.2rem;
+  font-family: "MuseoModerno", cursive;
   padding: 8px;
   border: none;
   outline: none;
+  color: var(--font-nav);
 }
 
 .contact-reseller .contact-reseller__contact button {
@@ -344,6 +348,8 @@ footer .social-media {
 footer .social-media .social-media__list {
   display: flex;
   justify-content: space-evenly;
+  width: 80%;
+  margin: 0 auto;
 }
 
 footer .social-media i {
