--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ header .logo-container img {
 header .logo-container figcaption {
   width: 50%;
   font-weight: 300;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 header .navbar {
@@ -81,6 +81,7 @@ header .navbar .navbar__list .navbar__list--item {
 
 header .navbar .navbar__list .navbar__list--item a {
   color: var(--font-nav);
+  font-size: 1.2rem;
 }
 header .search-area {
   display: none;
@@ -91,7 +92,6 @@ main .hero {
   display: grid;
   width: 90%;
   margin: 0 auto;
-  /* padding-left: 10px; */
   justify-items: center;
   grid-template: minmax(320px, 1fr) / repeat(auto-fit, minmax(300px, 1fr));
 }
@@ -211,13 +211,14 @@ main .service-description {
   );
 }
 
-.card-container__card h4 {
+.card-container__card h3 {
   font-weight: 500;
   font-size: 1.6rem;
   padding: 10px 0;
 }
 .card-container__card p {
   color: #7c7b9d;
+  font-size: 1.2rem;
 }
 
 .card__img {
@@ -231,7 +232,7 @@ main .service-description {
 }
 
 .card__img--radius {
-  height: 130px;
+  height: 150px;
   border-radius: 20px;
 }
 
@@ -268,7 +269,7 @@ main .service-description {
 .contact-reseller .contact-reseller__contact {
   display: flex;
   align-items: center;
-  width: 80%;
+  width: 100%;
   min-width: 260px;
   max-width: 350px;
   border-radius: 8px;
@@ -296,6 +297,7 @@ main .service-description {
   border: none;
   outline: none;
   background-color: transparent;
+  width: 25%;
 }
 
 .contact-reseller .contact-reseller__contact button i {
@@ -323,7 +325,12 @@ footer .links .links__list {
   justify-content: space-evenly;
   align-items: center;
   padding-top: 15px;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
+}
+
+.links__list li {
+  /* width: 100%; */
+  height: 40px;
 }
 
 footer .links .links__logo {
@@ -339,6 +346,7 @@ footer .links .links__rights {
   width: 80%;
   margin: 20px auto;
   text-align: center;
+  font-size: 1.2rem;
 }
 
 footer .social-media {
