--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -33,7 +34,6 @@ body {
   background-position: center;
   font-family: "MuseoModerno", cursive;
   color: var(--font-base);
-  scroll-behavior: smooth;
 }
 
 /*---------HEADER-----------*/
@@ -90,8 +90,7 @@ header .search-area {
 /*---------MAIN-----------*/
 main .hero {
   display: grid;
-  width: 90%;
-  margin: 0 auto;
+  /* padding-left: 10px; */
   justify-items: center;
   grid-template: minmax(320px, 1fr) / repeat(auto-fit, minmax(300px, 1fr));
 }
@@ -109,7 +108,7 @@ h1 {
 .hero__texts {
   width: 80%;
   margin: 0 auto;
-  min-width: 320px;
+  min-width: 300px;
   max-width: 700px;
 }
 
