--- a/css/desktop.css
+++ b/css/desktop.css
@@ -109,9 +109,8 @@
   }
 
   .hero__criptos img:nth-child(2) {
-    right: 0;
-    /* left: 115px; */
     right: 130px;
+    top: 200px;
   }
 
   .hero__criptos img:nth-child(3) {
