--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,8 @@ body {
 header {
   display: flex;
   width: 100%;
-  height: 50px;
-  justify-content: space-evenly;
+  height: 100px;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -68,15 +68,15 @@ header .logo-container figcaption {
 }
 
 header .navbar {
-  min-width: 150px;
+  min-width: 100px;
 }
 
 header .navbar .navbar__list {
   display: flex;
-}
-
-header .navbar .navbar__list .navbar__list--item {
-  padding: 0 5px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 100px;
 }
 
 header .navbar .navbar__list .navbar__list--item a {
@@ -90,7 +90,6 @@ header .search-area {
 /*---------MAIN-----------*/
 main .hero {
   display: grid;
-  /* padding-left: 10px; */
   justify-items: center;
   grid-template: minmax(320px, 1fr) / repeat(auto-fit, minmax(300px, 1fr));
 }
@@ -278,7 +277,7 @@ main .service-description {
 }
 
 .contact-reseller .contact-reseller__contact:focus-within {
-  border: 2px solid #e1b693;
+  outline: 2px solid #2472d6;
 }
 
 .contact-reseller .contact-reseller__contact input {
@@ -362,4 +361,12 @@ footer .social-media .social-media__list {
 footer .social-media i {
   color: #e1b693;
   font-size: 3rem;
+}
+
+@media screen and (min-width: 400px) {
+  header .navbar .navbar__list {
+    flex-direction: row;
+    width: 250px;
+    justify-content: space-evenly;
+  }
 }
