--- a/css/main.css
+++ b/css/main.css
@@ -366,7 +366,8 @@ footer .social-media i {
 @media screen and (min-width: 360px) {
   header .navbar .navbar__list {
     flex-direction: row;
-    width: 250px;
+/*     width: 250px; */
+    width:230px;
     justify-content: space-evenly;
   }
 }
